--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -29,6 +29,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+			<dependency>
+                    <groupId>io.cucumber</groupId>
+                    <artifactId>cucumber-java</artifactId>
+                    <version>4.2.6</version>
+                    <scope>test</scope>
+        </dependency>
+        <dependency>
+                    <groupId>io.cucumber</groupId>
+                    <artifactId>cucumber-junit</artifactId>
+                    <version>4.2.6</version>
+                    <scope>test</scope>
+        </dependency>
+        <dependency>
+                    <groupId>io.cucumber</groupId>
+                    <artifactId>cucumber-spring</artifactId>
+                    <version>2.1.0</version>
+                    <scope>test</scope>
+        </dependency>
+		
+		
 	</dependencies>
 
 	<build>
